# vibhavsurve

./: .env.example  .env.local  .gitignore  Dockerfile  README.md  animations.ts  next.config.js  package-lock.json  package.json  portfolio-deployment.yml  portfolio-service.yml  tailwind.config.js  types.ts
.github/workflows/: next.js.yml
backend/vibhav_api/: Cargo.toml
backend/vibhav_api/src/: controller.rs  main.rs  models.rs
components/: Bar.tsx  DynamicFaIcons.tsx  Navbar.tsx  ProjectCard.tsx  ProjectsNavbar.tsx  ServiceCard.tsx  Sidebar.tsx
db/: dbConnect.ts
layouts/: Layout.tsx
pages/: _app.tsx  _document.tsx  index.tsx  projects.tsx  resume.tsx
pages/api/: about.ts  projects.ts  resume.ts  services.ts
