[package]
name = "vibhav_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
mongodb = "2.2.1"
serde = { version = "1.0", features = ["derive"] }  
actix-web = "4.0.1"
bson = "2.2.0"
actix-cors = "0.6.1"